Changed max-width manual search modal releases column to a fixed width to prevent overflow on large resolution.

--- a/frontend/src/@scss/bazarr.scss
+++ b/frontend/src/@scss/bazarr.scss
@@ -31,6 +31,6 @@ body {
     display: block;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 30vw;
+    max-width: 500px;
   }
 }
